Added some temporary testing code

--- a/html.html
+++ b/html.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teamaker</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="code.js"></script>
   </head>
-  <body></body>
+  <body>
+    <p id="test"></p>
+    <button id="clicky">button</button>
+    <script src="code.js"></script>
+  </body>
 </html>
