added character speech funtionality

--- a/html.html
+++ b/html.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
+    <p id="speechbox"></p>
     <div id="player-image">
         <img src="Images/square.png"></img>
     </div>
