deleted player movement controls, added CSS, and changed the text display function. #FIXME, not working properly.

--- a/html.html
+++ b/html.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p id="speechbox"></p>
-    <div id="player-image">
-        <img src="Images/square.png"></img>
-    </div>
-    <script src="code.js">    
-    </script>
+    <p id="progress-text"></p>
+    <script src="code.js"></script>
   </body>
 </html>
